tests/invalid/user_module_alias_not_supported.wio
use gameplay as gp;

fn Entry(args: string[]) -> i32 {
    return 0;
}
